--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
     <p>Hoje aprendemos um pouquinho do que é frontend, Backend e HTML.</p>
 
+    <p> <i>batatinha</i> <b>frita</b> <sup>sem sal</sup></p>
+
+
+    <h2>Formatando o texto</h2>
+
     <a href="http://www.globalsul.com/site" target="_blank">Clique aqui</a>
 
     <p>His mouth started to speak, <b><u>but his brain</u></b> decided it hadn't
@@ -35,5 +40,22 @@
     This is     a     sentence with
             some bizarre formatting.
     </pre>
+
+    <p><a href="http://www.globalsul.com/site" title="abra aqui">Clique aqui</a>para abrir o link com titulo numa nova guia</p>
+
+    <p><a href="mailto:felipe.taborda.silva@gmail.com?subject=
+        Titulo do email&body=uma mensagem inicial padrao">clique aqui</a>para enviar um email com mensagem pre definida</p>
+
+    <h2>Imagens</h2>
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/512px-HTML5_logo_and_wordmark.svg.png">
+    
+    <img scr="./img/logo html.png"alt="logo html5" width="50px"height="50px">
+
+    <h1><img src="./img/logo_html.png"width="15px" height="15px">meu titulo com figrinha</h1>
+
+
+
+
 </body>
 </html>
